# obs-wave-plugin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  README.md  SECRETS.md  buildspec.json  capabilities.json  threat-model.md
.github/workflows/: _checks.yml  clang-format.yml  foundation-gate.yml
cmake/finders/: Findlibobs.cmake
data/locale/: en-US.ini
src/: plugin-main.c  wave-output.c  wave-output.h  wave-properties.c  wave-srt-parse.c  wave-srt-test-stub.c  wave-srt-test.c  wave-srt.c  wave-srt.h
